# stazy_travel

./: .dockerignore  .env.vps.example  24210137.md  BADGE_NOTIFICATIONS.md  Dockerfile.booking-service  Dockerfile.payment-service  Dockerfile.product-service  HOTEL_APPROVAL_WORKFLOW.md  README.md  ROLE_AUTHORIZATION.md  filtering_collaboration.md  improve_project.md  info.md  nginx.conf  package.json  pnpm-lock.yaml  route.md  setup_monorepo.md  turbo.json
apps/: search
apps/search-service/: .gitignore  24210137_EVALU.md  CF_EVALUATION_FRAMEWORK.md  README.md  SEARCH_SERVICE_ROADMAP.md  __homeStay.json  agent.py  bi_agent.py  cf_evaluation_report.json  check_data.py  check_real_map.py  evaluate.py  explicit_cf_evaluation_report.json  extract_cloudinary.py  feature_image.json  generate_categories.py  generate_data.py  generate_mock_interactions.py  generate_recommendations.py  generate_reviews_from_csv.py  generate_users.py  get_images.py  hotel_vectors.json  implicit_cf_evaluation_report.json  info.md  main.py  mock_interactions.json  package.json  process_data.py  pyproject.toml  real_images_map.json  recommend_collab.py  requirements.txt  search-service.md  search.md  train_real.py  train_svd.py  verify_gallery.py
apps/search-service/data/: hotel_faq.json
apps/search-service/jsons/: __daily_stats.json  __homeStay.json  __hotel_vectors.json  __interactions.json  __metrics.json  __mock_interactions.json  __recommendations.json  __reviews.json  __users.json  svd_training_report.json
apps/search-service/jsons-fix/: __interactions.json  __reviews.json
(+494 files in other folders)
