[project]
name = "search-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clerk-backend-api>=4.2.0",
    "faker>=39.0.0",
    "fastapi>=0.124.4",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "torch>=2.9.1",
    "unidecode>=1.4.0",
    "uvicorn>=0.38.0",
]
